src/objects/Rebate_Enrollment__c.object
<CustomObject>
    <fields>
        <fullName>Enrollment_Status__c</fullName>
        <label>Enrollment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Not Enrolled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Date_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>TEXT(Partner_Account__r.Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRM_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>PRMs who received the rebate email notification</inlineHelpText>
        <label>PRM Email</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rebate Enrollments</relationshipLabel>
        <relationshipName>Rebate_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <formula>TEXT(Partner_Account__r.Partner_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Form_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rebate Form Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Form_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rebate Form Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Form__c</fullName>
        <formula>HYPERLINK(Rebate_Form_Id__c ,Rebate_Form_Name__c,&quot;_blank &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebate Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Period__c</fullName>
        <label>Rebate Period</label>
        <referenceTo>Rebate_Period__c</referenceTo>
        <relationshipLabel>Rebate Enrollments</relationshipLabel>
        <relationshipName>Rebate_Enrollments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reminder_Date_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reminder Date Sent</label>
        <type>Date</type>
    </fields>
    <label>Rebate Enrollment</label>
    <nameField>
        <displayFormat>RE-{00000000}</displayFormat>
        <label>Rebate Enrollment No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>